fixind side bar logo width for 200px and overflow-y:overlay

--- a/src/components/SideBar/sideBar.css
+++ b/src/components/SideBar/sideBar.css
@@ -6,10 +6,11 @@
     min-width: 230px;
     flex: 0.2;
     background-color: #040404;
+    overflow-y: overlay;
 }
 .sideBar-logo{
     
-    width: 100px;
+    width: 200px;
     padding: 10px;
     margin-right: auto;
 }
